<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="release_date">April 8th, 2015</string>

    <string name="about_description">The TCS SHP Leadership Trail App is an app that turns your trail work at TCS SHP in Milford, OH, into an interactive learning experience. Some of the features of this app include:</string>

    <string name="about_features">•Keeping track of pace\n•Achievements with achievement history\n•Showing you your location\n•Sharing your location capabilities\n•A GPS Where Am I in case you get lost\n•Plant and Wildlife Information</string>

    <string name="about_developmentteam_title">Development Team</string>

    <string name="about_developmentteam_list"><u>Kurtis F. Taylor - Manager</u>\n\t •in charge of client POV testing\n<u>Mike Keck - Project Manager</u>\n\t •creator of the achievement manager\n<u>Dave Leaders - Lead Programmer</u>\n\t •creator of the display manager\n<u>Sarah Henney - Programmer</u>\n\t •creator of the distance manager\n<u>Tim Sandoval - Programmer</u>\n\t •database admin</string>


    <string name="invalid_qrc">Invalid TrailsApp QRCode.</string>

    <!-- MainTrailsActivity -->

    <string name="app_name">TCS TrailsApp</string>
    <string name="app_full_name">TCS SHP Leadership Trail App</string>

    <string name="title_trails">Trails Home</string>
    <string name="title_achievements">Achievement History</string>
    <string name="title_orcslounge">ORCs Lounge</string>
    <string name="title_trailbreakdown">Trails Breakdown</string>
    <string name="title_googlemaps">Where Am I ?</string>
    <string name="title_about">About</string>
    <string name="title_fitness">Fitness Manager</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toggle_dev">Toggle Dev Mode</string>
    <string name="action_settings">Settings</string>
    <string name="exit_menu">Exit</string>
    <string name="version_menu">Version</string>

    <string name="total_distance_label">Total Distance: </string>
    <string name="time_on_trail_label">Time on Trail: </string>
    <string name="pace_label">Pace: </string>
    <string name="begin_text">Scan QR Code to Begin!</string>
    <string name="scan_button_text">Scan</string>
    <string name="google_maps_button_text">Google Maps</string>
    <string name="exit_button_text">Exit</string>
    <!--
    <string name="map_prompt">Choose a Map</string>
    <string name="achievement_prompt">Choose Achieevement</string>

    <string-array name="map_names">
        <item>Select Map</item>
        <item>ExceEnt</item>
        <item>ExceEnt_L21</item>
        <item>L20_L21</item>
        <item>L18_L20</item>
        <item>DepeEnt_L18</item>
    </string-array>
    <string-array name="achievement_names">
        <item>Select Achievment</item>
        <item>Executive</item>
    </string-array>
    -->


    <!-- onTrailsService -->

    <string name="notification_title">TrailsApp</string>
    <string name="notification_message">On the Trails!</string>
    <string name="ticker_text">TRAILING!</string>

    <!-- Splash Screen -->

    <string name="splash_screen_title">TCS TRAILS APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_maps">TrailsApp Google Maps</string>
    <string name="hello_world">Hello world!</string>

    <!-- Mike's testing strings -->
    <string name="splash_screen_title_top_mk">TCS Seven Hills Park\nLeadership Trail</string>
    <string name="splash_screen_title_bot_mk">Tata Consultancy Services</string>
    <string name="splash_screen_title_bot_2_mk">Experience Certainty</string>

</resources>