<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_bg"
    tools:context="com.tcsorcs.trailsapp.activities.SplashScreenActivity" >

    <TextView
        android:id="@+id/TCSTrailsTitleTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/splash_screen_title_top_mk"
        android:textSize="31sp"
        android:textColor="@color/WHITE"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/splashScreenImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/tcs_milford"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/TCSTrailsTitleBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_title_bot_mk"
        android:textSize="31sp"
        android:textColor="@color/WHITE"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TCSTrailsTitleBot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_title_bot_2_mk"
        android:textSize="24sp"
        android:textColor="@color/WHITE"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp" />

</RelativeLayout>