<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    tools:context="com.tcsorcs.trailsapp.activites.MainTrailsActivity">


    <RelativeLayout
        android:id="@+id/MainTrailsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/MapPanContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/StatisticsContainer"
            android:layout_alignParentLeft="true"
            android:gravity="top"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/MapDevContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.tcsorcs.trailsapp.mapview.TouchImageView
                    android:id="@+id/MapPanView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/M1"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="2dip"
                    android:text="M1" />
                <Button
                    android:id="@+id/M2"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/M1"
                    android:layout_marginRight="2dip"
                    android:text="M2" />

                <Button
                    android:id="@+id/M3"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="2dip"
                    android:layout_toRightOf="@+id/M2"
                    android:text="M3" />
                <Button
                    android:id="@+id/M4"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="2dip"
                    android:layout_toRightOf="@+id/M3"
                    android:text="M4" />
                <Button
                    android:id="@+id/M5"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/M4"
                    android:layout_marginRight="2dip"
                    android:text="M5" />

                <Button
                    android:id="@+id/M6"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/A3"
                    android:layout_above="@+id/M5"
                    android:layout_marginBottom="2dip"
                    android:text="M6" />

                <Button
                    android:id="@+id/ClearButton"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_above="@+id/M5"
                    android:layout_marginBottom="2dip"
                    android:layout_marginRight="2dip"
                    android:text="Clear" />






                <Button
                    android:id="@+id/A1"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ClearButton"
                    android:layout_above="@+id/M2"
                    android:layout_marginBottom="2dip"
                    android:layout_marginRight="2dip"
                    android:text="A1" />

                <Button
                    android:id="@+id/A2"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/A1"
                    android:layout_above="@+id/M3"
                    android:layout_marginBottom="2dip"
                    android:layout_marginRight="2dip"

                    android:text="A2" />

                <Button
                    android:id="@+id/A3"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/A2"
                    android:layout_above="@+id/M4"
                    android:layout_marginBottom="2dip"
                    android:layout_marginRight="2dip"
                    android:text="A3" />

                <Button
                    android:id="@+id/S1"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="2dip"
                    android:text="S1" />

                <Button
                    android:id="@+id/S2"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/S1"
                    android:layout_marginRight="2dip"
                    android:text="S2" />
                <Button
                    android:id="@+id/S3"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/S2"
                    android:layout_marginRight="2dip"
                    android:text="S3" />
                <Button
                    android:id="@+id/S4"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/S3"
                    android:layout_marginRight="2dip"
                    android:text="S4" />

                <Button
                    android:id="@+id/S5"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/S4"
                    android:text="S5" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/StatisticsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Buttons"
            android:layout_alignParentLeft="true"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DistanceLabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/total_distance_label"
                    android:textColor="@color/label_color"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/begin_text"
                    android:textColor="@color/stats_values_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TimeLabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/time_on_trail_label"
                    android:textColor="@color/label_color"
                    android:visibility="invisible"

                    />

                <TextView
                    android:id="@+id/time_on_trail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/stats_values_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/PaceLabelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/pace_label"
                    android:textColor="@color/label_color"
                    android:visibility="invisible"

                    />

                <TextView
                    android:id="@+id/pace_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:textColor="@color/stats_values_color" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:id="@+id/ScanBarcodeButton"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/scan_button_text" />
                <!-- <Button
                     android:id="@+id/GoogleMapsButton"
                     style="@style/ButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:text="@string/google_maps_button_text" />-->
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>


    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.tcsorcs.trailsapp.fragments.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />


</android.support.v4.widget.DrawerLayout>